--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,17 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <pi.user>pi</pi.user>
+        <pi.password>raspberry</pi.password>
+        <pi.host>192.168.0.104</pi.host>
+        <pi.deployPath>/home/pi/pihex</pi.deployPath>
         <junit.version>4.12</junit.version>
         <sl4j.version>1.7.10</sl4j.version>
         <guice.version>3.0</guice.version>
+        <antrun.version>1.7</antrun.version>
+        <shade.version>2.3</shade.version>
+        <pi4j.version>0.0.5</pi4j.version>
+        <commons-configuration.version>1.10</commons-configuration.version>
     </properties>
 
     <dependencies>
@@ -30,15 +38,88 @@
             <artifactId>guice</artifactId>
             <version>${guice.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-core</artifactId>
+            <version>${pi4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-native</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>${commons-configuration.version}</version>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${shade.version}</version>
+                <configuration>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>com.margic.pihex.PiHex</mainClass>
+                        </transformer>
+                    </transformers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>${antrun.version}</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <configuration>
+                            <target>
+                                <!-- run a command on the remote server (here mkdir) -->
+                                <sshexec host="${pi.host}" port="22" username="${pi.user}" password="${pi.password}" command="mkdir -p ${pi.deployPath}" trust="true" />
+
+                                <!-- copy the shaded jar to the raspberry pi on install -->
+                                <scp todir="${pi.user}:${pi.password}@${pi.host}:${pi.deployPath}" trust="true" failonerror="true">
+                                    <fileset file="${project.basedir}/target/${project.artifactId}-${project.version}.jar" />
+                                </scp>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant-jsch</artifactId>
+                        <version>1.9.4</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+        </plugins>
+    </build>
 
 
 </project>
