--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <pi.user>pi</pi.user>
         <pi.password>raspberry</pi.password>
         <pi.host>192.168.0.104</pi.host>
@@ -18,8 +19,10 @@
         <guice.version>3.0</guice.version>
         <antrun.version>1.7</antrun.version>
         <shade.version>2.3</shade.version>
+        <maven-compiler.version>3.2</maven-compiler.version>
         <pi4j.version>0.0.5</pi4j.version>
         <commons-configuration.version>1.10</commons-configuration.version>
+        <commons-io.version>2.4</commons-io.version>
     </properties>
 
     <dependencies>
@@ -54,6 +57,11 @@
             <artifactId>commons-configuration</artifactId>
             <version>${commons-configuration.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
@@ -68,11 +76,21 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler.version}</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>${shade.version}</version>
                 <configuration>
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>com.margic.pihex.PiHex</mainClass>
                         </transformer>
                     </transformers>
@@ -96,11 +114,14 @@
                         <configuration>
                             <target>
                                 <!-- run a command on the remote server (here mkdir) -->
-                                <sshexec host="${pi.host}" port="22" username="${pi.user}" password="${pi.password}" command="mkdir -p ${pi.deployPath}" trust="true" />
+                                <sshexec host="${pi.host}" port="22" username="${pi.user}" password="${pi.password}"
+                                         command="mkdir -p ${pi.deployPath}" trust="true"/>
 
                                 <!-- copy the shaded jar to the raspberry pi on install -->
-                                <scp todir="${pi.user}:${pi.password}@${pi.host}:${pi.deployPath}" trust="true" failonerror="true">
-                                    <fileset file="${project.basedir}/target/${project.artifactId}-${project.version}.jar" />
+                                <scp todir="${pi.user}:${pi.password}@${pi.host}:${pi.deployPath}" trust="true"
+                                     failonerror="true">
+                                    <fileset
+                                            file="${project.basedir}/target/${project.artifactId}-${project.version}.jar"/>
                                 </scp>
                             </target>
                         </configuration>
