temp set a system property to determine if mock should be used.

--- a/src/main/resources/com.margic.pihex.properties
+++ b/src/main/resources/com.margic.pihex.properties
@@ -3,3 +3,7 @@ com.margic.pihex.i2caddress=0x40
 
 # frequency of pwm
 com.margic.pihex.pwm.frequency=50
+
+# this will be fixed soon //todo fix this rubbish
+# set usemock in system property to true or false -Dusemock=false or set here to true or false
+com.margic.pihex.useMock=${sys:usemock}
