--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
         <junit.version>4.12</junit.version>
         <sl4j.version>1.7.10</sl4j.version>
         <guice.version>3.0</guice.version>
+        <guava.version>18.0</guava.version>
         <antrun.version>1.7</antrun.version>
+        <ant-jsch.version>1.9.4</ant-jsch.version>
         <shade.version>2.3</shade.version>
         <maven-compiler.version>3.2</maven-compiler.version>
         <pi4j.version>0.0.5</pi4j.version>
@@ -40,6 +42,11 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>${guice.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>com.pi4j</groupId>
@@ -134,7 +141,7 @@
                     <dependency>
                         <groupId>org.apache.ant</groupId>
                         <artifactId>ant-jsch</artifactId>
-                        <version>1.9.4</version>
+                        <version>${ant-jsch.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
