--- a/src/test/resources/com.margic.pihex.properties
+++ b/src/test/resources/com.margic.pihex.properties
@@ -5,3 +5,5 @@ com.margic.pihex.i2caddress=0x40
 
 # frequency of pwm commented out for test cases
 # com.margic.pihex.pwm.frequency=50
+
+com.margic.pihex.camel.eventBusName=eventBus
