--- a/src/main/resources/com.margic.pihex.properties
+++ b/src/main/resources/com.margic.pihex.properties
@@ -7,3 +7,5 @@ com.margic.pihex.pwm.frequency=50
 # this will be fixed soon //todo fix this rubbish
 # set usemock in system property to true or false -Dusemock=false or set here to true or false
 com.margic.pihex.useMock=${sys:usemock}
+
+com.margic.pihex.camel.eventBusName=eventBus
