Updating reg tests

--- a/src/test/resources/com.margic.pihex.properties
+++ b/src/test/resources/com.margic.pihex.properties
@@ -1,3 +1,5 @@
+com.margic.pihex.camel.trace=true
+
 # not used in test
 com.margic.pihex.i2cbus=1
 # not used in test
@@ -7,3 +9,4 @@ com.margic.pihex.i2caddress=0x40
 # com.margic.pihex.pwm.frequency=50
 
 com.margic.pihex.camel.eventBusName=eventBus
+com.margic.pihex.useMock=true
