--- a/src/test/resources/com.margic.pihex.properties
+++ b/src/test/resources/com.margic.pihex.properties
@@ -8,5 +8,8 @@ com.margic.pihex.i2caddress=0x40
 # frequency of pwm commented out for test cases
 # com.margic.pihex.pwm.frequency=50
 
+// turn on camel tracing in the camel context
+com.margic.pihex.camel.tracing=true
 com.margic.pihex.camel.eventBusName=eventBus
+
 com.margic.pihex.useMock=true
