--- a/src/test/resources/com.margic.pihex.properties
+++ b/src/test/resources/com.margic.pihex.properties
@@ -13,3 +13,5 @@ com.margic.pihex.camel.tracing=true
 com.margic.pihex.camel.eventBusName=eventBus
 
 com.margic.pihex.useMock=true
+
+com.margic.pihex.api.port=8080
