--- a/src/main/resources/com.margic.pihex.properties
+++ b/src/main/resources/com.margic.pihex.properties
@@ -8,7 +8,12 @@ com.margic.pihex.pwm.frequency=50
 # set usemock in system property to true or false -Dusemock=false or set here to true or false
 com.margic.pihex.useMock=${sys:usemock}
 
+com.margic.pihex.servoCalibrationFromUri=direct:writeServoCalibration
+com.margic.pihex.servoCalibrationToUri=file:${sys:user.home}/conf/servo.conf
+
 // turn on camel tracing in the camel context
 com.margic.pihex.camel.tracing=false
 com.margic.pihex.camel.eventBusName=eventBus
 com.margic.pihex.camel.evenBusRouteTo="seda:queue"
+
+com.margic.pihex.api.port=8080
