--- a/src/test/resources/com.margic.pihex.properties
+++ b/src/test/resources/com.margic.pihex.properties
@@ -15,3 +15,5 @@ com.margic.pihex.camel.eventBusName=eventBus
 com.margic.pihex.useMock=true
 
 com.margic.pihex.api.port=8080
+
+com.margic.pihex.servo.calibration.uri=file:${sys:user.home}/conf/
