Refactored servo calibration and replaced it with servo config. Made the servo have a config object. rather than get its values from calibration object as a DTO.

--- a/src/main/resources/com.margic.pihex.properties
+++ b/src/main/resources/com.margic.pihex.properties
@@ -8,11 +8,14 @@ com.margic.pihex.pwm.frequency=50
 # set usemock in system property to true or false -Dusemock=false or set here to true or false
 com.margic.pihex.useMock=${sys:usemock}
 
-com.margic.pihex.servo.calibration.uri=file:${sys:user.home}/conf/
+# path for servo conf
+com.margic.pihex.servo.conf=${sys:user.home}/conf/
 
-// turn on camel tracing in the camel context
+# turn on camel tracing in the camel context
 com.margic.pihex.camel.tracing=false
 com.margic.pihex.camel.eventBusName=eventBus
 com.margic.pihex.camel.evenBusRouteTo="seda:queue"
 
+# ip address to bind rest api to
+com.margic.pihex.api.address=0.0.0.0
 com.margic.pihex.api.port=8080
