--- a/src/test/resources/com.margic.pihex.properties
+++ b/src/test/resources/com.margic.pihex.properties
@@ -14,6 +14,8 @@ com.margic.pihex.camel.eventBusName=eventBus
 
 com.margic.pihex.useMock=true
 
+com.margic.pihex.api.address=0.0.0.0
 com.margic.pihex.api.port=8080
 
-com.margic.pihex.servo.calibration.uri=file:${sys:user.home}/conf/
+# use test-classes folder for file conf folder for tests
+com.margic.pihex.servo.conf=${sys:user.dir}/target/test-classes/conf/
