replaced eventbus with asyncevent bus.

--- a/src/main/resources/com.margic.pihex.properties
+++ b/src/main/resources/com.margic.pihex.properties
@@ -12,10 +12,10 @@ com.margic.pihex.useMock=${sys:usemock}
 com.margic.pihex.servo.conf=${sys:user.home}/conf/
 
 # turn on camel tracing in the camel context
-com.margic.pihex.camel.tracing=false
+com.margic.pihex.camel.tracing=true
 com.margic.pihex.camel.eventBusName=eventBus
 com.margic.pihex.camel.evenBusRouteTo="seda:queue"
 
 # ip address to bind rest api to
 com.margic.pihex.api.address=0.0.0.0
-com.margic.pihex.api.port=8080
+com.margic.pihex.api.port=8181
