Updated to remove angle from servo and implement a servo update object to ensure multiple update events can be queued. Fixed the start up to ensure it actually updates the servo with start positions

--- a/src/main/resources/com.margic.pihex.properties
+++ b/src/main/resources/com.margic.pihex.properties
@@ -12,7 +12,7 @@ com.margic.pihex.useMock=${sys:usemock}
 com.margic.pihex.servo.conf=${sys:user.home}/conf/
 
 # turn on camel tracing in the camel context
-com.margic.pihex.camel.tracing=true
+com.margic.pihex.camel.tracing=false
 com.margic.pihex.camel.eventBusName=eventBus
 com.margic.pihex.camel.evenBusRouteTo="seda:queue"
 
