--- a/src/test/resources/startuptest/conf/servo-0.conf
+++ b/src/test/resources/startuptest/conf/servo-0.conf
@@ -1,1 +1,1 @@
-{"channel":0,"range":180,"center":5,"lowLimit":-90,"highLimit":90,"name":"Leg 0 Coxa"}
+{"channel":0,"range":180,"center":5,"startAngle":10,"lowLimit":-90,"highLimit":90,"name":"Leg 0 Coxa"}
