Adding sequencial right for optimization test see blog... http://www.margic.com/2015/04/optimizing-pca9685-servo-updates-using.html

--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -1,5 +1,5 @@
 org.slf4j.simpleLogger.logFile=System.out
 org.slf4j.simpleLogger.defaultLogLevel=info
 org.slf4j.simpleLogger.log.com.margic.pihex=debug
-org.slf4j.simpleLogger.log.com.margic.adafruitpwm=debug
+org.slf4j.simpleLogger.log.com.margic.adafruitpwm=trace
 org.slf4j.simpleLogger.showDateTime=false
